GivePossibleCardsEvent managed but there's an EOFException in the ClientView